--- a/Onliner for windows 10/Onliner for windows 10/Test.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Test.xaml
@@ -2,52 +2,22 @@
     x:Class="Onliner_for_windows_10.Test"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10"
+    xmlns:local="using:Onliner_for_windows_10.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="LightCyan">
-        <Grid Width="320" Background="{Binding ColorItem}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="12*"/>
-                <ColumnDefinition Width="11*"/>
-                <ColumnDefinition Width="37*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="3*"/>
-                <RowDefinition/>
-                <RowDefinition Height="59*"/>
-            </Grid.RowDefinitions>
-            <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Ellipse.Fill>
-                    <ImageBrush>
-                        <ImageBrush.ImageSource>
-                            <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding Image}" />
-                        </ImageBrush.ImageSource>
-                    </ImageBrush>
-                </Ellipse.Fill>
-            </Ellipse>
-            <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="8" TextAlignment="Center" VerticalAlignment="Center" Margin="0,1,0,0.333"/>
-            <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="8" TextAlignment="Left" VerticalAlignment="Center" Margin="5,2,0,2.333" Foreground="Gray" Grid.ColumnSpan="2"/>
-            <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="12" Margin="2,1.667,2,2" TextWrapping="Wrap" Grid.ColumnSpan="2"/>
-            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0">
-                <TextBlock Text="&#xE19F;" FontSize="8" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" />
-                <TextBlock Text="{Binding LikeCount}" FontSize="8" Margin="2,0,0,0" VerticalAlignment="Center"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="8"  VerticalAlignment="Center"/>
-                    <TextBlock Text="Ответить" FontSize="8"  VerticalAlignment="Center" Margin="2,0,0,0"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="4,0,0,0">
-                    <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="8"  VerticalAlignment="Center"/>
-                    <TextBlock Text="Цитировать" FontSize="8"  VerticalAlignment="Center" Margin="2,0,0,0"/>
-                </StackPanel>
-            </StackPanel>
-            <Rectangle Fill="Red" Width="100" Height="100" Grid.Row="3" Grid.ColumnSpan="3"/>
-            
-        </Grid>
+        <GridView ItemsSource="{Binding}">
+            <GridView.ItemTemplate>
+                <DataTemplate>
+                    <local:ImageLoader Source="{Binding}"
+                             Width="250"
+                             Height="250">
+                     
+                    </local:ImageLoader>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
