--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Onliner_for_windows_10.ProfilePage"
+    xmlns:UC="using:Onliner_for_windows_10.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -92,16 +93,9 @@
                        FontSize="18" 
                        FontWeight="Bold" 
                        Margin="0,10,0,0"/>
-                <Ellipse x:Name="ellipse" 
-                     Width="100" 
-                     Height="100" 
-                     Margin="5,10,0,0" 
-                     VerticalAlignment="Top" 
-                     Tapped="ellipse_Tapped" >
-                    <Ellipse.Fill>
-                        <ImageBrush ImageSource="{Binding Avatar}"/>
-                    </Ellipse.Fill>
-                </Ellipse>
+
+                <UC:ImageLoader x:Name="ProfileImage" Width="100" Height="100" Source="{StaticResource Image1}"/>
+                
                 <TextBlock x:Name="StatusProfileTextBlock" 
                        Text="{Binding Status}" 
                        TextAlignment="Center" 
@@ -114,7 +108,7 @@
                     Margin="5" 
                     Grid.Column="0" 
                     Grid.Row="0">
-                <Button Content="Личное сообщение" Width="150" Height="20" FontSize="10" BorderThickness="0"/>
+                <Button Content="Личное сообщение" Width="150" Height="20" FontSize="10" BorderThickness="0" Click="Button_Click"/>
                 <Button Content="Выйти" Width="150" Height="20" FontSize="10" BorderThickness="0" Margin="10,0,0,0"/>
             </StackPanel>
         </StackPanel>
@@ -124,7 +118,7 @@
                     Margin="0,0,0,0" 
                     Grid.ColumnSpan="2" 
                     Grid.Row="1" 
-                    HorizontalAlignment="Stretch">
+                    HorizontalAlignment="Center">
             <StackPanel.DataContext>
                 <local:ProfilePataList/>
             </StackPanel.DataContext>
