--- a/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Onliner_for_windows_10.Views"
+    xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -41,34 +42,36 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                
-                <Button Width="50" 
+                <StackPanel Grid.Column="0" Orientation="Horizontal">
+                    <Button Name="HamburgerButton" 
+                        Content="&#xE700;"
+                        Width="50" 
                         Height="50" 
-                        Grid.Column="4" 
-                        Style="{StaticResource ButtonHeader}" 
-                        Tag="&#xE715;"/>
-                <Button Name="BackButton" 
+                        FontSize="20"
+                        Grid.Column="0" 
+                        Click="HamburgerButton_Click" 
+                        Foreground="White" FontFamily="Segoe MDL2 Assets"
+                        Background="#FFC19500"
+                        />
+                    <Button Name="BackButton" 
                             Width="50" 
                             Height="50" 
                             Grid.Column="1" 
                             Style="{StaticResource ButtonHeader}" 
                             Tag="&#xE112;" 
                             Click="BackButton_Click"/>
+
+                    <TextBlock Text="Onliner" FontFamily="Comic Sans MS" FontSize="20" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                </StackPanel>
                 
-                <Button Name="HamburgerButton" 
-                        Style="{StaticResource ButtonHeader}" 
-                        Tag="&#xE700;" 
-                        Width="50" 
+                <Button Width="50" 
                         Height="50" 
-                        Grid.Column="0" 
-                        Click="HamburgerButton_Click" 
-                        Foreground="Black"
-                        >
-                    
-                    <Button.Background>
-                        <SolidColorBrush Color="#337E5555" Opacity="0.02"/>
-                    </Button.Background>
-                </Button>
+                        Grid.Column="4" 
+                        Style="{StaticResource ButtonHeader}" 
+                        Tag="&#xE715;"/>
+               
+
+
             </Grid>
         </StackPanel>
         <!-- Hamburger menu-->
@@ -106,21 +109,16 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="50"/>
                                 </Grid.RowDefinitions>
-                                <Ellipse Width="30" 
+                                <Image Width="30" 
                                          Height="30" 
                                          Grid.Column="0" 
-                                         Name="ImageAccaunt">
-                                    <Ellipse.Fill>
-                                        <ImageBrush Stretch="Uniform">
-                                            <ImageBrush.ImageSource>
-                                                <ImageSource>ms-appx:///Image/6tag_160815-221534.jpg</ImageSource>
-                                            </ImageBrush.ImageSource>
-                                        </ImageBrush>
-                                    </Ellipse.Fill>
-                                </Ellipse>
+                                         Name="ImageAccaunt"
+                                       Source="{StaticResource Image1}"/>
+     
+                               
                                 <TextBlock FontSize="14" 
                                            FontFamily="Segoe UI"
-                                           Height="25" 
+                                           Height="25"
                                            Grid.Column="1" 
                                            HorizontalAlignment="Center">
                             	<Run FontSize="15" Text="Профиль"/>
