--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -10,7 +10,7 @@
 
     <Page.Resources>
         <DataTemplate x:Key="CommentsList">
-            <Grid MinWidth="300" Background="{Binding ColorItem}" HorizontalAlignment="Stretch">
+            <Grid MinWidth="300"  Background="{Binding ColorItem}" HorizontalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="12*"/>
                     <ColumnDefinition Width="11*"/>
@@ -22,7 +22,7 @@
                     <RowDefinition/>
                     <RowDefinition Height="59*"/>
                 </Grid.RowDefinitions>
-                <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center">
+                <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,2,0,0">
                     <Ellipse.Fill>
                         <ImageBrush>
                             <ImageBrush.ImageSource>
@@ -31,21 +31,21 @@
                         </ImageBrush>
                     </Ellipse.Fill>
                 </Ellipse>
-                <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="10" TextAlignment="Center" VerticalAlignment="Center" Margin="0,1,0,0.333"/>
-                <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="10" TextAlignment="Left" VerticalAlignment="Center" Margin="5,2,0,2.333" Foreground="Gray" Grid.ColumnSpan="2"/>
-                <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="12" Margin="2,1.667,2,2" TextWrapping="Wrap" Grid.ColumnSpan="2" VerticalAlignment="Top"/>
-                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0">
-                    <TextBlock Text="&#xE19F;" FontSize="10" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" />
-                    <TextBlock Text="{Binding LikeCount}" FontSize="10" Margin="2,0,0,0" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,1,0,0.333" HorizontalAlignment="Stretch" TextWrapping="NoWrap"/>
+                <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="12" TextAlignment="Left" VerticalAlignment="Center" Margin="5,2,0,2.333" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
+                <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="14" Margin="2,1.667,2,2" TextWrapping="Wrap" Grid.ColumnSpan="2" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="3,0,0,0" >
+                    <TextBlock Text="&#xE19F;" FontSize="12" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" />
+                    <TextBlock Text="{Binding LikeCount}" FontSize="12" Margin="2,0,0,0" VerticalAlignment="Center"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="10"  VerticalAlignment="Center"/>
-                        <TextBlock Text="Ответить" FontSize="10"  VerticalAlignment="Center" Margin="2,0,0,0"/>
+                <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center"/>
+                        <TextBlock Text="Ответить" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="4,0,0,0">
-                        <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="10"  VerticalAlignment="Center"/>
-                        <TextBlock Text="Цитировать" FontSize="10"  VerticalAlignment="Center" Margin="2,0,0,0"/>
+                    <StackPanel Orientation="Horizontal" Margin="4,0,0,0" >
+                        <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center"/>
+                        <TextBlock Text="Цитировать" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
@@ -53,15 +53,62 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="50" Background="Aqua"/>
-        <Grid Margin="0,50,0,0" x:Name="MainGrid">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="6*"/>
-                <ColumnDefinition Width="4*"/>
-            </Grid.ColumnDefinitions>
-            <ScrollViewer x:Name="FullNewsListView" Grid.Column="0" ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                <ScrollViewer.Content>
-                    <Grid>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="FullNewsVisualStateGroup">
+                <VisualState x:Name="DeskTopVisualState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="720"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="AppBarForMobile.(AppBar.Visibility)" Value="Collapsed"/>
+                        <Setter Target="GridComments.(Grid.Column)" Value="1"/>
+                        <Setter Target="MainGrid.(Grid.Margin)" Value="0,50,0,0"/>
+                        <Setter Target="HelpRadioButton.(Grid.Visibility)" Value="Visible"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="MobileVisualState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="500"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="AppBarForMobile.(AppBar.Visibility)" Value="Visible"/>
+                        <Setter Target="GridComments.(Grid.Visibility)" Value="Collapsed"/>
+                        <Setter Target="MainGrid.(Grid.Margin)" Value="0,0,0,0"/>
+                        <Setter Target="HelpRadioButton.(Grid.Visibility)" Value="Collapsed"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+
+            <Grid Name="HelpRadioButton" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="50" Background="#FFEAEAEA">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal" Grid.Column="2">
+                    <Button x:Name="FontSizeSetting"  Width="50" Height="50" Content="&#xE1C8;" FontSize="20" FontFamily="Segoe MDL2 Assets" Click="FontSizeSetting_Click"/>
+                    <Button Width="50" Height="50" Content="&#xE72D;" FontSize="20" FontFamily="Segoe MDL2 Assets"/>
+                    <Button Width="50" Height="50" Content="&#xE12B;" FontSize="20" FontFamily="Segoe MDL2 Assets" />
+                </StackPanel>
+            </Grid>
+
+            <Grid Margin="0,50,0,0" x:Name="MainGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <ScrollViewer x:Name="FullNewsListView" MinWidth="350" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ScrollViewer.Content>
                         <Grid x:Name="MainNewsData">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="3*"/>
@@ -79,13 +126,37 @@
                             <TextBlock Text="{Binding TitleNews}" Grid.Row="1" Grid.ColumnSpan="3" FontSize="24" TextWrapping="Wrap" Margin="5"/>
                             <Image Source="{Binding Image}" Grid.Row="2" Grid.ColumnSpan="3" Margin="5"/>
                             <StackPanel x:Name="NewsListData" Grid.Row="3" Grid.ColumnSpan="3">
+                                <TextBlock Name="ContentTextBlock" Text="" TextWrapping="Wrap"/>
                             </StackPanel>
                         </Grid>
-                    </Grid>
-                </ScrollViewer.Content>
-            </ScrollViewer>
+                    </ScrollViewer.Content>
+                </ScrollViewer>
 
-            <ListView x:Name="CommentsListView" MinWidth="300" ItemsSource="{Binding}" Grid.Column="2" Margin="0,4,0,0" ItemTemplate="{StaticResource CommentsList}"/>
+                <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" MinWidth="350">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <ListView x:Name="CommentsListView" MinWidth="350" MaxWidth="350" Grid.Row="0" ItemsSource="{Binding}" ItemTemplate="{StaticResource CommentsList}" HorizontalAlignment="Stretch"/>
+                    <Grid HorizontalAlignment="Stretch" Background="#FFE6E6E6" Grid.Row="1" VerticalAlignment="Bottom">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox VerticalAlignment="Bottom" Margin="2" HorizontalAlignment="Stretch" AcceptsReturn="True" Grid.Column="0" BorderThickness="0"/>
+                        <Button Name="AddCommentButton" Content="&#xE8F2;" FontSize="16" FontFamily="Segoe MDL2 Assets" Margin="4" Background="#FFE6E6E6" Grid.Column="1" HorizontalAlignment="Center"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+            
         </Grid>
+        <AppBar Name="AppBarForMobile" VerticalAlignment="Bottom" Grid.Row="1">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" d:IsHidden="True">
+                <AppBarButton Content="favorite" Icon="Emoji" Click="AppBarButton_Click"/>
+                <AppBarButton Content="share" Icon="Send"/>
+                <AppBarButton Content="web" Icon="Account"/>
+            </StackPanel>
+        </AppBar>
     </Grid>
+
 </Page>
