account setting fix

--- a/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
@@ -290,7 +290,7 @@
         			FontSize="12"  
         			TextAlignment="Justify" Grid.Row="4"/>
                 <TextBlock x:Name="descriptionTextBlock" 
-        			Text="{Binding Footer}" 
+        			Text="{Binding Footer}"  TextAlignment="Right"
         			Foreground="Gray" Padding="2"
         			TextWrapping="WrapWholeWords" FontSize="12" Grid.Row="5" Style="{ThemeResource BaseTextBlockStyle}"/>
             </Grid>
