--- a/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
@@ -7,11 +7,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    
-    
-    
+
+
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-         <VisualStateManager.VisualStateGroups>
+        <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="VisualStateGroup">
                 <VisualState x:Name="VisualStateMobile">
                     <VisualState.StateTriggers>
@@ -21,6 +21,7 @@
                         <Setter Target="HelloStackPanel.(Grid.Column)" Value="0" />
                         <Setter Target="HelloStackPanel.(Grid.Row)" Value="0" />
                         <Setter Target="HelloStackPanel.(Grid.ColumnSpan)" Value="2" />
+                        <Setter Target="HelloStackPanel.(Grid.RowSpan)" Value="2" />
                         <Setter Target="InputControlStackpanel.(Grid.Column)" Value="0" />
                         <Setter Target="InputControlStackpanel.(Grid.Row)" Value="1" />
                         <Setter Target="InputControlStackpanel.(Grid.RowSpan)" Value="2" />
@@ -32,6 +33,7 @@
                         <AdaptiveTrigger MinWindowWidth="640" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
+                        <Setter Target="InputControlStackpanel.(StackPanel.Width)" Value="600"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -47,22 +49,15 @@
         </Grid.ColumnDefinitions>
         <StackPanel Name="HelloStackPanel" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="Здравствуйте!" FontSize="44" Foreground="BlueViolet" TextAlignment="Center"/>
-            <TextBlock Text="Добро пожаловать на Onliner.by" FontSize="28" TextAlignment="Center"/>
+            <TextBlock Text="Добро пожаловать на Onliner.by" FontSize="28" TextAlignment="Center" TextWrapping="Wrap"/>
         </StackPanel>
-        <StackPanel Name="InputControlStackpanel" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Center">
-            <TextBlock Text="Войти" FontSize="28" Foreground="Gray"/>
-            <TextBox  Name="LoginTextBox" MinWidth="300" BorderThickness="1" BorderBrush="Gray"/>
-            <TextBlock Text="Пароль" FontSize="28" Margin="0,10,0,0" Foreground="Gray"/>
-            <PasswordBox Name="PasswordBox"  MinWidth="300" BorderThickness="1"  BorderBrush="Gray"/>
-            <Grid Margin="0,10,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <CheckBox Name="SaveCheckBox" Content="запомнить" HorizontalAlignment="Center"></CheckBox>
-                <Button Name="LaterLogIn" Content="Позже" FontSize="18" Grid.Column="1" HorizontalAlignment="Stretch" Click="LaterLogIn_Click"/>
-            </Grid>
-            <Button Name="LoginButton" Content="Войти" HorizontalAlignment="Stretch" FontSize="18" Margin="0,10,0,0" Background="Yellow" Click="LoginButton_Click"/>
+        <StackPanel Name="InputControlStackpanel" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0" VerticalAlignment="Bottom">
+            <TextBlock x:Name="textBlock" Text="Войти" FontSize="24" Foreground="Gray"/>
+            <TextBox  Name="LoginTextBox" MinWidth="300" BorderThickness="1" BorderBrush="Gray" Margin="0,0,0,10"/>
+            <TextBlock Text="Пароль" FontSize="24" Margin="4,0,0,0" Foreground="Gray"/>
+            <PasswordBox Name="PasswordBox"  BorderThickness="1"  BorderBrush="Gray" Margin="0,0,0,20"/>
+            <Button Name="LaterLogIn" Content="Позже" FontSize="18" Height="50" Grid.Column="1" HorizontalAlignment="Stretch" Click="LaterLogIn_Click" Margin="0,5,0,0"/>
+            <Button Name="LoginButton" Content="Войти" HorizontalAlignment="Stretch" FontSize="18" Height="50" Margin="0,10,0,0" Background="Yellow" Click="LoginButton_Click"/>
         </StackPanel>
     </Grid>
     <Page.Transitions>
