--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -6,6 +6,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:MyToolkit.Controls"
     xmlns:Model="using:Onliner_for_windows_10.Model"
+    xmlns:Selector="using:Onliner_for_windows_10.Model.DataTemplateSelector"
+    xmlns:toolkit="using:MyToolkit.Controls"
+    xmlns:webviewhelper="using:Onliner_for_windows_10.Helper"
     x:Class="Onliner_for_windows_10.Views.ViewNewsPage"
     mc:Ignorable="d">
 
@@ -70,7 +73,6 @@
                         <AddDeleteThemeTransition/>
                         <ContentThemeTransition/>
                         <ReorderThemeTransition/>
-                        <EntranceThemeTransition IsStaggeringEnabled="False"/>
                     </TransitionCollection>
                 </Setter.Value>
             </Setter>
@@ -93,6 +95,62 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Selector:ListViewItemSelector
+            x:Key="ListViewItemSelector"
+            HeaderTemlate="{StaticResource HeaderTemlate}"
+            TitleTemlate="{StaticResource TitleTemlate}"
+            PictureTemlate="{StaticResource PictureTemlate}"
+            StoryTemlate="{StaticResource StoryTemlate}"
+            ImageTemlate="{StaticResource ImageTemlate}"
+            VideoTemlate="{StaticResource VideoTemlate}"
+            WebTemlate="{StaticResource WebTemlate}"
+            />
+
+
+        <DataTemplate x:Key="HeaderTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding CategoryNews}" FontSize="12" Style="{ThemeResource BodyTextBlockStyle}" TextAlignment="Left" VerticalAlignment="Center" Foreground="Blue"/>
+                <TextBlock Text="{Binding Time}" FontSize="12" Style="{ThemeResource BodyTextBlockStyle}" VerticalAlignment="Center" Foreground="Gray" Margin="5" TextAlignment="Right"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="TitleTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <TextBlock Text="{Binding Value}" FontSize="18" Style="{ThemeResource SubtitleTextBlockStyle}" TextWrapping="Wrap" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="PictureTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <Image Source="{Binding Value}"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="StoryTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <toolkit:HtmlView Html="{Binding Value}" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="ImageTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <Image Source="{Binding Value}"  Margin="5"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="VideoTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <MediaElement Source="{Binding UriYoutube}" Margin="10" AutoPlay="False" AreTransportControlsEnabled="True"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="WebTemlate">
+            <Grid HorizontalAlignment="Stretch">
+                <WebView webviewhelper:WebViewHelper.Html="{Binding Value}" MinWidth="300" Height="250"/>
+            </Grid>
+        </DataTemplate>
+        <Style x:Key="ListViewItemNewsStyle" TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="Padding" Value="0"/>
+        </Style>
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -106,9 +164,9 @@
                         <Setter Target="AppBarForMobile.(AppBar.Visibility)" Value="Collapsed"/>
                         <Setter Target="MainGrid.(Grid.Margin)" Value="0,50,0,0"/>
                         <Setter Target="HelpRadioButton.(Grid.Visibility)" Value="Visible"/>
-                        <Setter Target="FullNewsListView.(Grid.Column)" Value="0"/>
+                        <Setter Target="MainNewsData.(Grid.Column)" Value="0"/>
 
-                        <Setter Target="GridComments.(Grid.Visibility)" Value="Visibility"/>
+                        <Setter Target="GridComments.(Grid.Visibility)" Value="Visible"/>
                         <Setter Target="GridComments.(Grid.Column)" Value="1"/>
                     </VisualState.Setters>
                 </VisualState>
@@ -120,7 +178,7 @@
                         <Setter Target="AppBarForMobile.(AppBar.Visibility)" Value="Visible"/>
                         <Setter Target="MainGrid.(Grid.Margin)" Value="0,0,0,0"/>
                         <Setter Target="HelpRadioButton.(Grid.Visibility)" Value="Collapsed"/>
-                        <Setter Target="FullNewsListView.(Grid.ColumnSpan)" Value="2"/>
+                        <Setter Target="MainNewsData.(Grid.ColumnSpan)" Value="2"/>
                         <!--CommentsGrid-->
                         <Setter Target="GridComments.(Grid.Visibility)" Value="Collapsed"/>
                         <Setter Target="GridComments.(Grid.Column)" Value="0"/>
@@ -151,36 +209,10 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <ScrollViewer x:Name="FullNewsListView" MinWidth="350" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
-                    <ScrollViewer.Content>
-                        <Grid x:Name="MainNewsData">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="3*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="25*"/>
-                                <RowDefinition Height="50*"/>
-                                <RowDefinition Height="100*"/>
-                                <RowDefinition Height="540*"/>
-                            </Grid.RowDefinitions>
-                            <TextBlock Text="{Binding Category}" Grid.Row="0" FontSize="15" Style="{ThemeResource BodyTextBlockStyle}" Grid.RowSpan="1" TextAlignment="Left" VerticalAlignment="Center" Foreground="Blue" Margin="5"/>
-                            <TextBlock Text="{Binding DataTime}" Grid.Column="2" FontSize="15" Style="{ThemeResource BodyTextBlockStyle}" VerticalAlignment="Center" Foreground="Gray" Margin="5" HorizontalAlignment="Right"/>
-                            <TextBlock Text="{Binding TitleNews}" Grid.Row="1" FontSize="20" Style="{ThemeResource SubtitleTextBlockStyle}" Grid.ColumnSpan="3" TextWrapping="Wrap" Margin="5"
-                                       ContinuumNavigationTransitionInfo.IsEntranceElement="True"/>
-                            <Image Source="{Binding Image}" Grid.Row="2" Grid.ColumnSpan="3" Margin="5"/>
-                            <StackPanel x:Name="NewsListData" Grid.Row="3" Grid.ColumnSpan="3">
-                                <StackPanel.ChildrenTransitions>
-                                    <TransitionCollection>
-                                        <EdgeUIThemeTransition Edge="Left"/>
-                                    </TransitionCollection>
-                                </StackPanel.ChildrenTransitions>
-                            </StackPanel>
-                        </Grid>
-                    </ScrollViewer.Content>
-                </ScrollViewer>
+                <Grid x:Name="MainNewsData" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
+                    <ListView Name="NewsListInfo" ItemTemplateSelector="{StaticResource ListViewItemSelector}" ItemsSource="{Binding NewsListItem}" SelectionChanged="NewsListInfo_SelectionChanged" ItemContainerStyle="{StaticResource ListViewItemNewsStyle}"/>
 
+                </Grid>
                 <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Background="White" Visibility="Visible">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -217,7 +249,7 @@
             </Grid>
         </AppBar>
     </Grid>
-    
+
     <Page.Transitions>
         <TransitionCollection>
             <PaneThemeTransition Edge="Bottom"/>
